full ready application with translations and logik

--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -1,231 +1,43 @@
 { 
-    "phone_number" : "Номер телефона",
-    "login" : "Войти",
-    "dont_have_account" : "Нет аккаунта?",
-    "sign_up" : "Зарегистрироваться",
-    "choose_language" : "Выберите язык",
-    "full_name" : "Фамилия Имя",
-    "accept_privacy_policy" : "Принимаю политику конфиденциальности",
-    "already_have_account" : "Уже есть аккаунт?",
-
-    "enter_sms" : "Введите код из СМС",
-    "resend_sms" : "Отправить код повторно",
-    "we_send_sms" : "Мы отправили вам 6-значный код в виде СМС",
-    "sms_alredy_sent" : "Пожалуйста, подождите 60 секунд, чтобы отправить СМС повторно!",
-    "sms_lenght" : "Код подтверждения должен состоять из 6 цифр.",
-    "verify" : "Подтвердить",
-
-    "menu" : "Меню",
-    "categories" : "Категории",
-    "all_categories" : "Все категории",
-    "all" : "Все",
-    "edit" : "Редактировать",
-    "delete" : "Удалить",
-    "element_deleted" : "Товар успешно удален",
-    "return" : "Повторить",
-    "not_found_items" : "Ничего не найдено",
-    "in_this_category_dont_have_products" : "В этой категории нет товаров",
-    "edit_product" : "Редактировать товар",
-    "add_product" : "Добавить товар",
-
-    "products" : "Товары",
-    "promotions" : "Акции",
-    "no_data" : "Нет данных",
-    "orders" : "Заказы",
-    "no_orders" : "Нет заказов",
-    "cart" : "Корзина",
-    "cart_empty" : "Корзина пуста",
-
-    "my_data" : "Мои данные",
-    "my_adresess" : "Мои адреса",
-    "chooselanguage" : "Выбор языка",
-    "contacts" : "Контакты",
-    "privacy_policy" : "Политика конфиденциальности",
-    "about_app" : "О приложении",
-    "exit" : "Выход",
-    "home" : "Главная",
-    "profile" : "Профиль",
-
-    "yes" : "Да",
-    "no" : "Нет",
-    "exit_text" : "Если вы выйдете, товары в корзине будут удалены. Вы уверены, что хотите выйти?",
-
-    "settings" : "Настройки",
-
-    "new" : "Новый",
-    "confirmed" : "Подтвержден",
-    "processing" : "В процессе",
-    "ontheway" : "В пути",
-    "delivered" : "Доставлено",
-    "cancelled" : "Отменено",
-    "refunded" : "Возвращено",
-    "unknown" : "Неизвестно",
-
-    "order" : "Заказ",
-    "payment_type" : "Тип оплаты",
-    "total_sum" : "Итоговая сумма",
-    "curier_detail" : "Информация о курьере",
-    "call" : "📞",
-    "order_details" : "Детали заказа",
-    "sum" : "Кол-во",
-    "price" : "Цена",
-    "items" : "Товары",
-    "cargo" : "Доставка",
-    "total" : "Итого",
-    "order_detail" : "Детали заказа",
-
-    "money" : "Наличные",
-
-    "minute_one": "минуту назад",
-    "minute_few": "минуту назад",
-    "minute_many": "минут назад",
-    "hour_one": "час назад",
-    "hour_few": "часа назад",
-    "hour_many": "часов назад",
-    "day_one": "день назад",
-    "day_few": "дня назад",
-    "day_many": "дней назад",
-    
-
-
-    "payment_proccess" : "В процессе оплаты",
-    "order_time" : "Время заказа",
-    "ready_to_delivery" : "Готов к доставке",
-    "cod" : "Наличные",
-    "som" : "сум",
-
-    "oder_history" : "История заказов",
-    "accept" : "Принять",
-    "open_map" : "Показать на карте",
-
-    "user_details" : "Данные пользователя",
-    "cancel" : "Отменить",
-    "weekly_chart" : "Еженедельная диаграмма",
-    "M" : "Пн",
-    "T" : "Вт",
-    "W" : "Ср",
-    "Th" : "Чт",
-    "F" : "Пт",
-    "S" : "Сб",
-    "Su" : "Вс",
-
-    "download" : "Скачать",
-    "document_download" : "Хотите скачать документ политику конфиденциальности?",
-
-    "name" : "Имя",
-    "phone" : "Телефон",
-    "birth_date" : "Дата рождения",
-    "gender" : "Пол",
-    "email" : "Электронная почта",
-    "save" : "Сохранить",
-    "man" : "Мужской",
-    "woman" : "Женский",
-
-    "success" : "Успешно",
-    "success_update_user" : "Успешно обновлено",
-    "error" : "Ошибка",
-    "error_update_user" : "Ошибка обновления",
-
-    "app_creator" : "Создатель приложения",
-    "version" : "Версия",
-    "mark_app" : "Оцените приложение",
-
-    "submit_order" : "Подтвердить заказ:",
-    "your_order" : "Ваш заказ",
-    "order_time1" : "Время доставки: Ближайшие 30 минут",
-    "choose_address" : "Выберите адрес",
-    "add_address" : "Добавить адрес",
-    "your_dont_have_address" : "У вас нет адреса",
-
-    "choose_from_my_adress" : "Выберите из моих адресов",
-    "choose" : "Выбрать",
-    "choose_location" : "Выберите местоположение",
-    "error_location_sumbit" : "Пожалуйста, заполните все поля и выберите местоположение",
-    "choose_from_map" : "Выберите из карты",
-    "address" : "Адрес",
-    "house" : "Дом",
-    "flat" : "Квартира",
-    "door_password" : "Код двери",
-    "additional_number" : "Дополнительный номер",
-    "comment" : "Комментарий",
-    "please_enter_address" : "Пожалуйста, введите адрес",
-    "address_added" : "Адрес успешно добавлен",
-
-    "call_delivery" : "Телефоны доставки:",
-    "address_detail" : "Детали адреса",
-
-    "close" : "Закрыть",
-    "select_gender" : "Выберите пол",
-    "add" : "Добавить",
-    "no_addresses" : "Нет адресов",
-    "add_address_prompt" : "Чтобы заказать блюдо, добавьте пожалуйста адрес",
-    "delete_address" : "Удалить адрес",
-    "delete_address_confirm" : "Вы действительно хотите удалить адрес?",
-
-    "contacts.phone_error": "Не удалось открыть приложение телефона: {0}",
-    "contacts.show_on_map": "Показать на карте",
-    "contacts.address": "Адрес",
-    "contacts.working_hours": "Часы работы",
-    "contacts.no_weekends": "без выходных",
-
-    "day": "День",
-    "week": "Неделя",
-    "month": "Месяц",
-    "year": "Год",
-    "telegram_users": "Пользователи Telegram",
-    "mobile_users": "Мобильные пользователи",
-    "total_users": "Общее количество пользователей",
-    "new_users": "Новые пользователи",
-    "monday": "Пн",
-    "tuesday": "Вт",
-    "wednesday": "Ср",
-    "thursday": "Чт",
-    "friday": "Пт",
-    "saturday": "Сб",
-    "sunday": "Вс",
-    "week_1": "1 нед",
-    "week_2": "2 нед",
-    "week_3": "3 нед",
-    "week_4": "4 нед",
-    "week_5": "5 нед",
-    "january": "Янв",
-    "march": "Мар",
-    "june": "Июн",
-    "september": "Сен",
-    "december": "Дек",
-    "error_loading_data": "Ошибка загрузки данных",
-
-    "today": "Сегоднешная",
-    "profit": "Прибыль",
-    "this_week": "Эта неделя",
-    "this_month": "Этот месяц",
-    "this_year": "Этот год",
-    "delivery_not_available_outside_hours": "Наши филиалы работают с 9:00 до 24:00. Пожалуйста, сделайте заказ в другое время.",
-
-    "order_count": "Количество заказов",
-    "top_items": "Топ товаров",
-    "count": "Количество",
-    "retry": "Повторить",
-
-    "location_selected": "Местоположение выбрано",
-
-    "delete_account": "Удалить аккаунт",
-
-    "unauth": "Вы не авторизованы, чтобы получить доступ к этой странице. Пожалуйста, войдите в систему.",
-
-    "login_to_access" : "Войдите в систему, чтобы получить доступ к этой странице",
-    "please_login" : "Пожалуйста, войдите в систему",
-    "guest_user" : "Гость"
-
-
-
-
-
-
-
-
-
-
-
-
+    "welcome": "Добро пожаловать",
+    "login": "Вход",
+    "logout": "Выход",
+    "register": "Регистрация",
+    "enter_email": "Введите электронную почту",
+    "enter_password": "Введите пароль",
+    "forgot_password": "Забыли пароль?",
+    "dont_have_an_acoount": "У вас нет аккаунта? ",
+    "create_account": "Создать аккаунт",
+    "create_new_account": "Создать новый аккаунт",
+    "re_enter_password": "Повторите пароль",
+    "sign_with_google": "Войти с помощью Google",
+    "you_are_conected": "Вы подключены",
+    "unpair": "Отключиться",
+    "home": "Главная",
+    "settings": "Настройки",
+    "group": "Группы",
+    "account": "Аккаунт",
+    "change_language": "Изменить язык",
+    "restore_password": "Восстановить пароль",
+    "products": "Продукты",
+    "unpair_subtitle": "Подтвердите отключение",
+    "cancel": "Отмена",
+    "confirm": "Подтвердить",
+    "are_you_sure": "Вы уверены?",
+    "will_deleted_lists": "Все продукты в этом списке будут удалены",
+    "choose_color": "Выберите цвет",
+    "delete_this_element": "Удалить этот элемент",
+    "new_product": "Новый продукт",
+    "eg_milk": "Например, молоко 2л",
+    "add": "Добавить",
+    "new_list": "Новый список",
+    "eg_shopping_list": "Например, список покупок",
+    "connection_code": "Код подключения",
+    "connect_via_code": "Подключиться по коду",
+    "connect_via_qr_code": "Подключиться по QR-коду",
+    "eg_code": "Например, 123ABD",
+    "connect": "Подключиться",
+    "scan_qr_code": "Сканировать QR-код",
+    "please_first_you_need_connect": "Пожалуйста, сначала создайте пару, чтобы можно было обмениваться списками.",
+    "paired": "Подключено к"
 }
